Fix missing EOF delimiter in CD workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -145,6 +145,7 @@ jobs:
             ]
           }
           EOF
+          EOF
           
           aws s3api put-bucket-cors --bucket $BUCKET_NAME --cors-configuration file://cors-config.json
         else
