--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Create Lambda handler
       run: |
         mkdir -p src
-        cat > src/lambda.js << EOF
+        cat > src/lambda.js << 'EOF'
         const app = require('./app');
         const serverless = require('serverless-http');
         
@@ -133,7 +133,7 @@ jobs:
             --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
           
           # Add CORS configuration
-          cat > cors-config.json << EOF
+          cat > cors-config.json << 'EOF'
           {
             "CORSRules": [
               {
@@ -145,6 +145,8 @@ jobs:
             ]
           }
           EOF
+          EOF
+          
           EOF
           
           aws s3api put-bucket-cors --bucket $BUCKET_NAME --cors-configuration file://cors-config.json
@@ -186,7 +188,7 @@ jobs:
           echo "Creating IAM role $ROLE_NAME"
           
           # Create trust policy document
-          cat > trust-policy.json << EOF
+          cat > trust-policy.json << 'EOF'
           {
             "Version": "2012-10-17",
             "Statement": [
@@ -210,7 +212,7 @@ jobs:
             --policy-arn arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
           
           # Create custom policy for DynamoDB and S3 access
-          cat > custom-policy.json << EOF
+          cat > custom-policy.json << 'EOF'
           {
             "Version": "2012-10-17",
             "Statement": [
